[gd_scene load_steps=6 format=3 uid="uid://bi63a3dx3rqug"]

[ext_resource type="Script" path="res://objectives/objective_grid/objective_editor/objective_editor.gd" id="1_vrivh"]
[ext_resource type="Script" path="res://objectives/objective_grid/objective_editor/reward_selector.gd" id="2_76fne"]
[ext_resource type="PackedScene" uid="uid://7vtyug2h5vr3" path="res://objectives/objective_grid/objective_editor/reward_editor.tscn" id="2_do7ha"]
[ext_resource type="Script" path="res://objectives/objective_grid/objective_editor/trigger_selector.gd" id="4_cg0bb"]
[ext_resource type="PackedScene" uid="uid://0dwxsmod6xea" path="res://objectives/triggers/trigger_editor.tscn" id="4_pyv0t"]

[node name="ObjectiveEditor" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -199.0
offset_right = 254.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2
script = ExtResource("1_vrivh")

[node name="Objective" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ObjectiveName" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "ObjectiveName"

[node name="Description" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Description"

[node name="FlavorText" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "FlavorText
"

[node name="Rewards" type="GridContainer" parent="Objective"]
layout_mode = 2
columns = 3

[node name="Upfront" type="Label" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
text = "Upfront:"

[node name="UpfrontReward" type="OptionButton" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
selected = 0
item_count = 2
popup/item_0/text = "REPUTATION"
popup/item_1/text = "VICTORY"
popup/item_1/id = 1
script = ExtResource("2_76fne")

[node name="UpfrontRewardEditor" parent="Objective/Rewards" instance=ExtResource("2_do7ha")]
unique_name_in_owner = true
layout_mode = 2

[node name="Completion" type="Label" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
text = "Completion:"

[node name="CompletionReward" type="OptionButton" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
selected = 1
item_count = 2
popup/item_0/text = "REPUTATION"
popup/item_1/text = "VICTORY"
popup/item_1/id = 1
script = ExtResource("2_76fne")

[node name="CompletionRewardEditor" parent="Objective/Rewards" instance=ExtResource("2_do7ha")]
unique_name_in_owner = true
layout_mode = 2

[node name="TriggerSelector" type="HBoxContainer" parent="Objective"]
layout_mode = 2

[node name="TriggerLabel" type="Label" parent="Objective/TriggerSelector"]
layout_mode = 2
text = "Trigger:"

[node name="Trigger" type="OptionButton" parent="Objective/TriggerSelector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
selected = 0
item_count = 1
popup/item_0/text = "DELIVERED"
script = ExtResource("4_cg0bb")

[node name="TriggerEditor" parent="Objective/TriggerSelector" instance=ExtResource("4_pyv0t")]
unique_name_in_owner = true
layout_mode = 2

[node name="Remove" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "x"

[connection signal="text_changed" from="Objective/ObjectiveName" to="." method="_on_objective_name_text_changed"]
[connection signal="text_changed" from="Objective/Description" to="." method="_on_description_text_changed"]
[connection signal="text_changed" from="Objective/FlavorText" to="." method="_on_flavor_text_text_changed"]
[connection signal="item_selected" from="Objective/Rewards/UpfrontReward" to="." method="_on_upfront_reward_selected"]
[connection signal="item_selected" from="Objective/Rewards/CompletionReward" to="." method="_on_completion_reward_selected"]
[connection signal="item_selected" from="Objective/TriggerSelector/Trigger" to="Objective/TriggerSelector/TriggerEditor" method="_on_trigger_selected"]
[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
